--- a/_config.yml
+++ b/_config.yml
@@ -23,11 +23,11 @@ collections:
     output: true
   qatar: # name of collection
     output: true # makes sure pages are output as html files
-    layout: "qatar_item" # the layout for the pages to use
+    layout: "keywords_item" # the layout for the pages to use
     metadata:
-      source: "qatar.csv" # path to the metadata file within `_data`
+      source: "keywords.csv" # path to the metadata file within `_data`
     images:
-      source: "raw_images/qatar" # path to the directory of images within `_data`
+      source: "raw_images/keywords" # path to the directory of images within `_data`
 
 # --------------------------------------------------------------
 # SEARCH INDEX SETTINGS
