--- a/_config.yml
+++ b/_config.yml
@@ -12,6 +12,7 @@ authors:
     github: egpalazzolo
 description: 'Kinship and Longing: Keywords for Black Louisiana brings to light evidence of Black life and Black history through annotated transcriptions and translations of French and Spanish colonial documents from 18th century Louisiana'
 baseurl: "/keywords"
+header: assets/figures/Icon-02.png
 gallery: True
 
 
