--- a/img/derivatives/iiif/d0035/manifest.json
+++ b/img/derivatives/iiif/d0035/manifest.json
@@ -297,6 +297,5 @@ layout: none
       ]
     }
   ],
-  "full": "{{ '/' | absolute_url }}img/derivatives/iiif/images/d0035_d0035-01/full/full/0/default.jpg",
-  "fullwidth": "{{ '/' | absolute_url }}img/derivatives/iiif/images/d0035_d0035-01/full/1140,/0/default.jpg"
+  "full": "{{ '/' | absolute_url }}img/derivatives/iiif/images/d0035_d0035-01/full/full/0/default.jpg"
 }
