markdown pages for transcriptions and translations

--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,7 @@ collections:
     output: true
   keywords: # name of collection
     output: true # makes sure pages are output as html files
-    layout: "keywords_item.html" # the layout for the pages to use
+    layout: "keywords_item" # the layout for the pages to use
     metadata:
       source: "keywords.csv" # path to the metadata file within `_data`
     images:
