--- a/img/derivatives/iiif/d0111/manifest.json
+++ b/img/derivatives/iiif/d0111/manifest.json
@@ -689,6 +689,5 @@ layout: none
       ]
     }
   ],
-  "full": "{{ '/' | absolute_url }}img/derivatives/iiif/images/d0111_d0111-01./full/full/0/default.jpg",
-  "fullwidth": "{{ '/' | absolute_url }}img/derivatives/iiif/images/d0111_d0111-01./full/1140,/0/default.jpg"
+  "full": "{{ '/' | absolute_url }}img/derivatives/iiif/images/d0111_d0111-01./full/full/0/default.jpg"
 }
