--- a/img/derivatives/iiif/d0210/manifest.json
+++ b/img/derivatives/iiif/d0210/manifest.json
@@ -44,8 +44,36 @@ layout: none
         },
         {
           "@type": "sc:Canvas",
-          "@id": "{{ '/' | absolute_url }}img/derivatives/iiif/canvas/d0210_d0210-02.json",
+          "@id": "{{ '/' | absolute_url }}img/derivatives/iiif/canvas/d0210_d0210-01.json",
           "label": "Page 2",
+          "width": 1600,
+          "height": 1008,
+          "thumbnail": "{{ '/' | absolute_url }}img/derivatives/iiif/images/d0210_d0210-01/full/250,/0/default.jpg",
+          "images": [
+            {
+              "@type": "oa:Annotation",
+              "@id": "{{ '/' | absolute_url }}img/derivatives/iiif/annotation/d0210_d0210-01.json",
+              "motivation": "sc:painting",
+              "resource": {
+                "@id": "{{ '/' | absolute_url }}img/derivatives/iiif/images/d0210_d0210-01/full/full/0/default.jpg",
+                "@type": "dcterms:Image",
+                "format": "image/jpeg",
+                "service": {
+                  "@context": "http://iiif.io/api/image/2/context.json",
+                  "@id": "{{ '/' | absolute_url }}img/derivatives/iiif/images/d0210_d0210-01",
+                  "profile": "http://iiif.io/api/image/2/level0.json"
+                },
+                "width": 800,
+                "height": 504
+              },
+              "on": "{{ '/' | absolute_url }}img/derivatives/iiif/canvas/d0210_d0210-01.json"
+            }
+          ]
+        },
+        {
+          "@type": "sc:Canvas",
+          "@id": "{{ '/' | absolute_url }}img/derivatives/iiif/canvas/d0210_d0210-02.json",
+          "label": "Page 3",
           "width": 1600,
           "height": 2534,
           "thumbnail": "{{ '/' | absolute_url }}img/derivatives/iiif/images/d0210_d0210-02/full/250,/0/default.jpg",
@@ -69,10 +97,65 @@ layout: none
               "on": "{{ '/' | absolute_url }}img/derivatives/iiif/canvas/d0210_d0210-02.json"
             }
           ]
+        },
+        {
+          "@type": "sc:Canvas",
+          "@id": "{{ '/' | absolute_url }}img/derivatives/iiif/canvas/d0210_d0210-02.json",
+          "label": "Page 4",
+          "width": 1600,
+          "height": 2534,
+          "thumbnail": "{{ '/' | absolute_url }}img/derivatives/iiif/images/d0210_d0210-02/full/250,/0/default.jpg",
+          "images": [
+            {
+              "@type": "oa:Annotation",
+              "@id": "{{ '/' | absolute_url }}img/derivatives/iiif/annotation/d0210_d0210-02.json",
+              "motivation": "sc:painting",
+              "resource": {
+                "@id": "{{ '/' | absolute_url }}img/derivatives/iiif/images/d0210_d0210-02/full/full/0/default.jpg",
+                "@type": "dcterms:Image",
+                "format": "image/jpeg",
+                "service": {
+                  "@context": "http://iiif.io/api/image/2/context.json",
+                  "@id": "{{ '/' | absolute_url }}img/derivatives/iiif/images/d0210_d0210-02",
+                  "profile": "http://iiif.io/api/image/2/level0.json"
+                },
+                "width": 800,
+                "height": 1267
+              },
+              "on": "{{ '/' | absolute_url }}img/derivatives/iiif/canvas/d0210_d0210-02.json"
+            }
+          ]
+        },
+        {
+          "@type": "sc:Canvas",
+          "@id": "{{ '/' | absolute_url }}img/derivatives/iiif/canvas/d0210_d0210-03.json",
+          "label": "Page 5",
+          "width": 1600,
+          "height": 2368,
+          "thumbnail": "{{ '/' | absolute_url }}img/derivatives/iiif/images/d0210_d0210-03/full/250,/0/default.jpg",
+          "images": [
+            {
+              "@type": "oa:Annotation",
+              "@id": "{{ '/' | absolute_url }}img/derivatives/iiif/annotation/d0210_d0210-03.json",
+              "motivation": "sc:painting",
+              "resource": {
+                "@id": "{{ '/' | absolute_url }}img/derivatives/iiif/images/d0210_d0210-03/full/full/0/default.jpg",
+                "@type": "dcterms:Image",
+                "format": "image/jpeg",
+                "service": {
+                  "@context": "http://iiif.io/api/image/2/context.json",
+                  "@id": "{{ '/' | absolute_url }}img/derivatives/iiif/images/d0210_d0210-03",
+                  "profile": "http://iiif.io/api/image/2/level0.json"
+                },
+                "width": 800,
+                "height": 1184
+              },
+              "on": "{{ '/' | absolute_url }}img/derivatives/iiif/canvas/d0210_d0210-03.json"
+            }
+          ]
         }
       ]
     }
   ],
-  "full": "{{ '/' | absolute_url }}img/derivatives/iiif/images/d0210_d0210-01/full/full/0/default.jpg",
-  "fullwidth": "{{ '/' | absolute_url }}img/derivatives/iiif/images/d0210_d0210-01/full/1140,/0/default.jpg"
+  "full": "{{ '/' | absolute_url }}img/derivatives/iiif/images/d0210_d0210-01/full/full/0/default.jpg"
 }
