--- a/img/derivatives/iiif/d0281/manifest.json
+++ b/img/derivatives/iiif/d0281/manifest.json
@@ -605,6 +605,5 @@ layout: none
       ]
     }
   ],
-  "full": "{{ '/' | absolute_url }}img/derivatives/iiif/images/d0281_d0281-01/full/full/0/default.jpg",
-  "fullwidth": "{{ '/' | absolute_url }}img/derivatives/iiif/images/d0281_d0281-01/full/1140,/0/default.jpg"
+  "full": "{{ '/' | absolute_url }}img/derivatives/iiif/images/d0281_d0281-01/full/full/0/default.jpg"
 }
