adding LHC scans and pdf for d0011

--- a/_config.yml
+++ b/_config.yml
@@ -67,6 +67,8 @@ search:
           - names_white
           - names_native
           - doc_type
+          - pdf
+          - lhc_scans
           - keywords
 
 
