new run trying to fix hypolite

--- a/img/derivatives/iiif/d0266/manifest.json
+++ b/img/derivatives/iiif/d0266/manifest.json
@@ -129,6 +129,5 @@ layout: none
       ]
     }
   ],
-  "full": "{{ '/' | absolute_url }}img/derivatives/iiif/images/d0266_d0266-2/full/full/0/default.jpg",
-  "fullwidth": "{{ '/' | absolute_url }}img/derivatives/iiif/images/d0266_d0266-2/full/1140,/0/default.jpg"
+  "full": "{{ '/' | absolute_url }}img/derivatives/iiif/images/d0266_d0266-2/full/full/0/default.jpg"
 }
