--- a/img/derivatives/iiif/d0335/manifest.json
+++ b/img/derivatives/iiif/d0335/manifest.json
@@ -44,36 +44,8 @@ layout: none
         },
         {
           "@type": "sc:Canvas",
-          "@id": "{{ '/' | absolute_url }}img/derivatives/iiif/canvas/d0335_d0335-3.json",
-          "label": "Page 2",
-          "width": 1304,
-          "height": 2000,
-          "thumbnail": "{{ '/' | absolute_url }}img/derivatives/iiif/images/d0335_d0335-3/full/250,/0/default.jpg",
-          "images": [
-            {
-              "@type": "oa:Annotation",
-              "@id": "{{ '/' | absolute_url }}img/derivatives/iiif/annotation/d0335_d0335-3.json",
-              "motivation": "sc:painting",
-              "resource": {
-                "@id": "{{ '/' | absolute_url }}img/derivatives/iiif/images/d0335_d0335-3/full/full/0/default.jpg",
-                "@type": "dcterms:Image",
-                "format": "image/jpeg",
-                "service": {
-                  "@context": "http://iiif.io/api/image/2/context.json",
-                  "@id": "{{ '/' | absolute_url }}img/derivatives/iiif/images/d0335_d0335-3",
-                  "profile": "http://iiif.io/api/image/2/level0.json"
-                },
-                "width": 1304,
-                "height": 2000
-              },
-              "on": "{{ '/' | absolute_url }}img/derivatives/iiif/canvas/d0335_d0335-3.json"
-            }
-          ]
-        },
-        {
-          "@type": "sc:Canvas",
           "@id": "{{ '/' | absolute_url }}img/derivatives/iiif/canvas/d0335_d0335-4.json",
-          "label": "Page 3",
+          "label": "Page 2",
           "width": 1252,
           "height": 2000,
           "thumbnail": "{{ '/' | absolute_url }}img/derivatives/iiif/images/d0335_d0335-4/full/250,/0/default.jpg",
@@ -101,7 +73,7 @@ layout: none
         {
           "@type": "sc:Canvas",
           "@id": "{{ '/' | absolute_url }}img/derivatives/iiif/canvas/d0335_d0335-5.json",
-          "label": "Page 4",
+          "label": "Page 3",
           "width": 1265,
           "height": 2000,
           "thumbnail": "{{ '/' | absolute_url }}img/derivatives/iiif/images/d0335_d0335-5/full/250,/0/default.jpg",
@@ -129,6 +101,5 @@ layout: none
       ]
     }
   ],
-  "full": "{{ '/' | absolute_url }}img/derivatives/iiif/images/d0335_d0335-2/full/full/0/default.jpg",
-  "fullwidth": "{{ '/' | absolute_url }}img/derivatives/iiif/images/d0335_d0335-2/full/1140,/0/default.jpg"
+  "full": "{{ '/' | absolute_url }}img/derivatives/iiif/images/d0335_d0335-2/full/full/0/default.jpg"
 }
