--- a/img/derivatives/iiif/d0072/manifest.json
+++ b/img/derivatives/iiif/d0072/manifest.json
@@ -101,6 +101,5 @@ layout: none
       ]
     }
   ],
-  "full": "{{ '/' | absolute_url }}img/derivatives/iiif/images/d0072_d0072-02/full/full/0/default.jpg",
-  "fullwidth": "{{ '/' | absolute_url }}img/derivatives/iiif/images/d0072_d0072-02/full/1140,/0/default.jpg"
+  "full": "{{ '/' | absolute_url }}img/derivatives/iiif/images/d0072_d0072-02/full/full/0/default.jpg"
 }
