--- a/img/derivatives/iiif/d0073/manifest.json
+++ b/img/derivatives/iiif/d0073/manifest.json
@@ -45,6 +45,5 @@ layout: none
       ]
     }
   ],
-  "full": "{{ '/' | absolute_url }}img/derivatives/iiif/images/d0073/full/full/0/default.jpg",
-  "fullwidth": "{{ '/' | absolute_url }}img/derivatives/iiif/images/d0073/full/1140,/0/default.jpg"
+  "full": "{{ '/' | absolute_url }}img/derivatives/iiif/images/d0073/full/full/0/default.jpg"
 }
