--- a/img/derivatives/iiif/d0326/manifest.json
+++ b/img/derivatives/iiif/d0326/manifest.json
@@ -6,74 +6,18 @@ layout: none
   "@id": "{{ '/' | absolute_url }}img/derivatives/iiif/d0326/manifest.json",
   "@type": "sc:Manifest",
   "label": "d0326",
-  "thumbnail": "{{ '/' | absolute_url }}img/derivatives/iiif/images/d0326_d0326-2/full/250,/0/default.jpg",
+  "thumbnail": "{{ '/' | absolute_url }}img/derivatives/iiif/images/d0326_d0326-4/full/250,/0/default.jpg",
   "viewingDirection": "left-to-right",
   "viewingHint": "individuals",
   "sequences": [
     {
-      "@id": "{{ '/' | absolute_url }}img/derivatives/iiif/sequence/d0326_d0326-2.json",
+      "@id": "{{ '/' | absolute_url }}img/derivatives/iiif/sequence/d0326_d0326-4.json",
       "@type": "sc:Sequence",
       "canvases": [
         {
           "@type": "sc:Canvas",
-          "@id": "{{ '/' | absolute_url }}img/derivatives/iiif/canvas/d0326_d0326-2.json",
-          "label": "Page 1",
-          "width": 1341,
-          "height": 2000,
-          "thumbnail": "{{ '/' | absolute_url }}img/derivatives/iiif/images/d0326_d0326-2/full/250,/0/default.jpg",
-          "images": [
-            {
-              "@type": "oa:Annotation",
-              "@id": "{{ '/' | absolute_url }}img/derivatives/iiif/annotation/d0326_d0326-2.json",
-              "motivation": "sc:painting",
-              "resource": {
-                "@id": "{{ '/' | absolute_url }}img/derivatives/iiif/images/d0326_d0326-2/full/full/0/default.jpg",
-                "@type": "dcterms:Image",
-                "format": "image/jpeg",
-                "service": {
-                  "@context": "http://iiif.io/api/image/2/context.json",
-                  "@id": "{{ '/' | absolute_url }}img/derivatives/iiif/images/d0326_d0326-2",
-                  "profile": "http://iiif.io/api/image/2/level0.json"
-                },
-                "width": 1341,
-                "height": 2000
-              },
-              "on": "{{ '/' | absolute_url }}img/derivatives/iiif/canvas/d0326_d0326-2.json"
-            }
-          ]
-        },
-        {
-          "@type": "sc:Canvas",
-          "@id": "{{ '/' | absolute_url }}img/derivatives/iiif/canvas/d0326_d0326-3.json",
-          "label": "Page 2",
-          "width": 1341,
-          "height": 2000,
-          "thumbnail": "{{ '/' | absolute_url }}img/derivatives/iiif/images/d0326_d0326-3/full/250,/0/default.jpg",
-          "images": [
-            {
-              "@type": "oa:Annotation",
-              "@id": "{{ '/' | absolute_url }}img/derivatives/iiif/annotation/d0326_d0326-3.json",
-              "motivation": "sc:painting",
-              "resource": {
-                "@id": "{{ '/' | absolute_url }}img/derivatives/iiif/images/d0326_d0326-3/full/full/0/default.jpg",
-                "@type": "dcterms:Image",
-                "format": "image/jpeg",
-                "service": {
-                  "@context": "http://iiif.io/api/image/2/context.json",
-                  "@id": "{{ '/' | absolute_url }}img/derivatives/iiif/images/d0326_d0326-3",
-                  "profile": "http://iiif.io/api/image/2/level0.json"
-                },
-                "width": 1341,
-                "height": 2000
-              },
-              "on": "{{ '/' | absolute_url }}img/derivatives/iiif/canvas/d0326_d0326-3.json"
-            }
-          ]
-        },
-        {
-          "@type": "sc:Canvas",
           "@id": "{{ '/' | absolute_url }}img/derivatives/iiif/canvas/d0326_d0326-4.json",
-          "label": "Page 3",
+          "label": "Page 1",
           "width": 1600,
           "height": 2386,
           "thumbnail": "{{ '/' | absolute_url }}img/derivatives/iiif/images/d0326_d0326-4/full/250,/0/default.jpg",
@@ -101,7 +45,7 @@ layout: none
         {
           "@type": "sc:Canvas",
           "@id": "{{ '/' | absolute_url }}img/derivatives/iiif/canvas/d0326_d0326-5.json",
-          "label": "Page 4",
+          "label": "Page 2",
           "width": 1600,
           "height": 2388,
           "thumbnail": "{{ '/' | absolute_url }}img/derivatives/iiif/images/d0326_d0326-5/full/250,/0/default.jpg",
@@ -129,6 +73,5 @@ layout: none
       ]
     }
   ],
-  "full": "{{ '/' | absolute_url }}img/derivatives/iiif/images/d0326_d0326-2/full/full/0/default.jpg",
-  "fullwidth": "{{ '/' | absolute_url }}img/derivatives/iiif/images/d0326_d0326-2/full/1140,/0/default.jpg"
+  "full": "{{ '/' | absolute_url }}img/derivatives/iiif/images/d0326_d0326-4/full/full/0/default.jpg"
 }
