--- a/.github/workflows/build-keywords.yml
+++ b/.github/workflows/build-keywords.yml
@@ -46,13 +46,19 @@ jobs:
 
       # Run the Wax tasks for our Keywords collections
       # This will generate pages, search index, and IIIF image derivatives
-      - name: Wax build Keywords
-        id: wax-tasks
+      - name: 'Wax build: Keywords'
+        id: wax-tasks-kw
         shell: bash
         run: |
           bundle exec rake wax:pages keywords
           bundle exec rake wax:search main
           bundle exec rake wax:derivatives:iiif keywords
+      
+      # Run Wax tasks for the 'Keywords descriptions' collection
+      # Only needs pages generated for now
+      - name: 'Wax build: Keywords descriptions'
+        shell: bash
+        run: bundle exec rake wax:pages keywords_descriptions
 
       - name: Build with Jekyll
         # Outputs to the './_site' directory by default
