Update people set data (and rename csv)

--- a/_config.yml
+++ b/_config.yml
@@ -48,7 +48,7 @@ collections:
     output: true
     layout: "person_description"
     metadata:
-      source: "K4BL People Set.csv"
+      source: "k4blpeople.csv"
 
 # --------------------------------------------------------------
 # SEARCH INDEX SETTINGS
@@ -90,14 +90,6 @@ search:
 # submenu via `sub`.
 
 menu:
-  - label: "About Us"
-    sub:
-      - label: "Project"
-        link: "/about/"
-      - label: "Team"
-        link: "/team/"
-      - label: "Contact Us"
-        link: "/contact/"
   - label: "Data"
     sub:
       - label: "Documents"
@@ -110,5 +102,11 @@ menu:
     link: "/resources/"
   - label: "Search"
     link: "/search/"
-
-
+  - label: "About Us"
+    sub:
+      - label: "Project"
+        link: "/about/"
+      - label: "Team"
+        link: "/team/"
+      - label: "Contact Us"
+        link: "/contact/"
