resources dropdown menu

--- a/_config.yml
+++ b/_config.yml
@@ -99,6 +99,10 @@ menu:
     sub:
       - label: "Bibliography"
         link: "/bibliography/"
+      - label: "Documentation"
+        link: "/documentation"
+      - label: "Contact Us"
+        link: "/contact/"
   - label: "Search"
     link: "/search/"
 
