fix link/label mix up

--- a/_config.yml
+++ b/_config.yml
@@ -81,8 +81,8 @@ menu:
         link: "/about/"
       - label: "The Team"
         link: "/team/"
-      - label: "KCCAB"
-        link: "/kccab/"
+      - label: "/kccab/"
+        link: "KCCAB"
       - label: "Contact Us"
         link: "/contact/"
   - label: "Discover"
@@ -97,8 +97,8 @@ menu:
         link: "https://stories.k4bl.org"
   - label: "Resources"
     sub:
-      - link: "History"
-        label: "/history/"
+      - link: "/history/"
+        label: "History"
       - label: "Bibliography"
         link: "/bibliography/"
       - label: "Documentation"
