--- a/_config.yml
+++ b/_config.yml
@@ -76,13 +76,13 @@ menu:
   - label: "About"
     sub:
       - label: "The Journey"
-        label: "/journey/"
+        link: "/journey/"
       - label: "The Project"
         link: "/about/"
       - label: "The Team"
         link: "/team/"
-      - label: "/kccab/"
-        link: "KCCAB"
+      - label: "KCCAB"
+        link: "/kccab/"
       - label: "Contact Us"
         link: "/contact/"
   - label: "Discover"
