--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Kinship and Belonging
-subtitle: Keywords for Black Louisiana
+title: Keywords for Black Louisiana
+subtitle: 
 header: /assets/figures/Icon-02.png
 gallery: True
 url: https://docs.k4bl.org
