--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
-title: Keywords for Black Louisiana
-subtitle: 
+title: Black Borderlands Project
+subtitle: black life in the Gulf South
 header: /assets/figures/Icon-02.png
 gallery: True
-url: https://docs.k4bl.org
+url: 
 
 # --------------------------------------------------------------
 # COLLECTION SETTINGS
